# git-gud-stats

./: .gitignore  README.md  Todo  dev-requirements.txt  package-lock.json  pyproject.toml  python3-apt_2.4.0ubuntu4_amd64.deb  requirements.txt
app/: README.md  __init__.py  main.py  settings.py
app/api/: auth.py  endpoints.py  schemas.py
app/infraestructure/github/: client.py  queries.py
app/routers/: stats.py
app/services/: user_data_service.py
app/utils/: dependencies.py  language_stats.py
client/: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
client/src/: app.css  app.html  fede_response.json
client/src/lib/: Footer.svelte  Header.svelte  PieChart.svelte  Sidebar.svelte
client/src/lib/api/: user_graphql.ts
client/src/lib/components/: AuthBox.svelte  Footer.svelte  GitHubLoginBtn.svelte  Header.svelte  PieChart.svelte
client/src/lib/constants/: README.md  langColors.ts
client/src/lib/stores/: auth.ts  theme.ts
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/github-error/: +page.svelte
client/src/routes/login/: +page.svelte
tests/: test_language_stats.py  test_main.py  test_models.py  test_stats.py
