[project]
name = "git-gud-stats"
version = "0.1.0"
description = "A simple GitHub app for fetching stats."
readme = "README.md"
requires-python = ">=3.11"

# dependencias principales
dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "authlib",
    "werkzeug",
    "requests",
]

[project.optional-dependencies]
dev = [
    "respx",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
